Revision history for Pandoc-Elements

{{$NEXT}}

0.23  2016-09-30 22:35:22 CEST
    - Add Pandoc::Filter::Usage and option --about for filter documentation
    - Extend pandoc-filters to support future Pandoc filters directory
    - Make most getters also setters

0.22  2016-09-22 12:03:38 CEST
    - Add pandoc-filters script to run filters specified in document metadata 
    - Let pandoc_walk/pandoc_filter not filter metadata fields
    - Add metavars example 

0.21  2016-09-19 22:05:43 CEST
    - extend method 'keyvals' as setter
    - document and extend metadata elements by method 'metavalue'
    - make content method an optional setter (not documented yet)
    - let to_json return canonical JSON

0.20  2016-09-04 14:34:05 CEST
    - Revert extended class selector, implement setter for id/class/keyvals instead
    - Add graphviz example

0.19  2016-09-03 09:42:34 CEST
    - Extend class selector to test existence of given class
    - Extend attributes with Hash::MultiValue.
    - Drop support of special key 'classes' in attributes helper function

0.18  2016-04-06 13:23:35 CEST
    - Fix and extend attributes function (#29/#26/#14)
    - Document and test removal of SoftBreak element
    - fix json serialization to ensure right scalar types (#27)

0.17  2016-03-07 21:15:58 CET
    - Support stringification of meta elements
    - Add SoftBreak inline element, introduced in Pandoc 1.16

0.16  2016-02-23 20:16:52 CET
    - Support new (Pandoc 1.16) document model with Link and Image attributes (issue #11)
    - Fix blessing metadata top level values

0.15  2015-12-14 10:12:50 CET
    - fix Pod::Simple::Pandoc for old Pod::Simple
    - allow more lazy filter scripting
    - add example to remove unnumbered sections

0.14  2015-12-11 14:11:51 CET
    - refactor and introduce Pandoc::Filter::Lazy

0.13  2015-12-09 12:43:50 CET
    - fix passing of output format
    - add method match (experimental)
    - added examples myemph.pl and theorem.pl
