@@ -14,4 +14,5 @@ requires 'IPC::Run3';
 on test => sub {
     requires 'Test::More', '0.96';
     requires 'Test::Output';
+    requires 'Test::Exception';
 };
